2012-04-20  Karl Berry  <karl@gnu.org>

	* util/texi2dvi: more doc on --dvipdf, spelling.
	* tp/texi2any.pl: new option --dvipdf.

	* doc/texinfo.txi (Invoking texi2any) <--macro-expand>:
	mention that it implies passing -E to texi2dvi, when requested.
	(Invoking texi2any): sync with current --help, except for texi2dvi
	options.

2012-04-19  Patrice Dumas  <pertusus@free.fr>

	* configure.ac, tp/tests/*: move tex4ht and latex2html related tests to
	long checks.

2012-04-18  Karl Berry  <karl@gnu.org>

	* install-info/README: Debian now uses our install-info,
	per Norbert Preining.  Yay!

2012-04-17  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Tips): mention texi-elements-by-size (for usage).
	(Reference Implementation): likewise (for an example); also texi2html.
	* util/texi-elements-by-size: allow invocation from anywhere.
	{ on same line as sub?

2012-04-16  Karl Berry  <karl@gnu.org>

	* util/texi-elements-by-size: renamed from
	texi_sort_elements_count.pl and texinfo configure variables removed.

2012-04-13  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Command Contexts): clarify @shortcaption, etc.
	(Top Node Naming): revisit whole-manual xref text.
	(Other Configuration Variables) [KEEP_TOP_EXTERNAL_REF]: Englishing.

	* tp/texi2any.pl (configured_version): add +dev to distinguish
	from installed.

2012-04-12  Sergey Poznyakoff  <gray@gnu.org.ua>

	info: improve parsing of node names containing dots.

	References to node names containing dots are followed correctly,
	if they appear in menus or in single-argument xrefs (which produce
	references followed by double-column).

	* info-utils.h (PARSE_NODE_DFLT, PARSE_NODE_SKIP_NEWLINES)
	(PARSE_NODE_VERBATIM, PARSE_NODE_START): New constants.
	* info/info-utils.c (info_parse_node): Change the meaning of the
	second argument.  All uses updated.
	(save_string, saven_string): Allow for string_size_p==NULL.
	* info/nodes.c (info_get_node): Take three arguments, the last